# Gujju.py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SHIPPING.md  install.sh  mypy.ini  pyproject.toml  ruff.toml  vercel.json
.github/workflows/: ci.yml
editor/kemlang-vscode/: README.md  package.json
editor/kemlang-vscode/syntaxes/: kemlang.tmLanguage.json
examples/: errors.jsk  hello.kem  loop_and_if.jsk
kemlang/: cli.py  errors.py  fmt.py  interpreter.py  lexer.py  parser.py  types.py
kemlang-website/: README.md  mdx-components.tsx  next.config.mjs  package.json  tailwind.config.ts
kemlang-website/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
kemlang-website/app/changelog/: page.tsx
kemlang-website/app/docs/: layout.tsx  page.tsx
kemlang-website/app/playground/: page.tsx
kemlang-website/app/robots.txt/: route.ts
kemlang-website/components/: code-sample.tsx  docs-layout.tsx  install-tabs.tsx  site-footer.tsx  site-header.tsx
kemlang-website/content/docs/: installation.mdx
kemlang-website/content/docs/language/: syntax.mdx
kemlang-website/lib/: mdx.ts
kemlang-website/public/: 404.html  index.html  index.txt  robots.txt  sitemap.xml
kemlang-website/public/404/: index.html
kemlang-website/public/_next/static/chunks/: 117-2fdaafc72ad87af5.js  270.44e4c552c61c5336.js  289.51a49341fce7936e.js  325-b0c640dee251be4a.js  520-a1c65794511092e0.js  main-90d55a0031214244.js  main-app-e240c5b51ded70a1.js  main-app-fb779a18a53a205f.js  main-d175f2bb3cec3ed9.js  main-f7d5b68dd1c485a2.js  webpack-675bd1ea52a82c4d.js  webpack-c1a55733b4bb2175.js
kemlang-website/public/_next/static/chunks/app/: layout-8172aff05ee53e13.js  layout-e507626f56f124eb.js  page-516f38d7bbf1fd4c.js  page-d9bd0b0cd3144e89.js
kemlang-website/public/_next/static/chunks/app/changelog/: page-86abf8dfdebe261a.js  page-8fe8188600c35e0a.js
kemlang-website/public/_next/static/chunks/app/docs/: layout-536a61a92ecc9df6.js  layout-579316ed215796b5.js  page-1287f96ead3fc22d.js  page-93a4a217de1c7275.js
kemlang-website/public/_next/static/chunks/app/playground/: page-3746e2fc3b462eaf.js  page-a52d261a94f341d1.js
kemlang-website/public/_next/static/css/: 3781d32191b094ce.css
kemlang-website/public/changelog/: index.html  index.txt
kemlang-website/public/docs/: index.html  index.txt
kemlang-website/public/playground/: index.html  index.txt
npm-package/: README.md  install.js  package.json
tests/: test_cli.py  test_exec.py  test_fmt.py  test_lexer.py  test_parser.py  test_prop_fuzz.py
webplayground/: app.py
webplayground/templates/: index.html
